<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fair Fare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_send_button">Calculate!</string>
    <string name="str_src_add">Source Address</string>
    <string name="action_about">About</string>
    <string name="str_dest_add">Destination Address</string>
    <string name="title_activity_settings">Settings</string><string name="str_settings_editFare">Edit Fare Card</string>
    
    <string name="str_minDist">Minimum Distance :</string>
    <string name="str_minFare">Minimum Fare :</string>
    <string name="str_farePerKm">Fare per km :</string>
    <string name="str_update">Update</string>
    <string name="str_current_fare_card">Current Fare Card</string>
    <string name="str_default">Defaults</string>
    <string name="title_activity_about">About</string>
    <string name="preference_file_key">com.makingmagic.fairfare.PREFERENCES</string><string name="AboutDump">Fair Fare (WIP version)\nVersion: WIP (UI Shell)\nCreated By: Chirag Ravindra\n\nAlpha Version coming soon!</string>
    
    <string name="saved_minFare">com.makingmagic.fairfare.MIN_FARE</string>
    <string name="saved_farePerKm">com.makingmagic.fairfare.FARE_PER_KM</string><string name="saved_minDist">com.makingmagic.fairfare.MIN_DIST</string>
    
    <string name="saved_default_minFare">20.0</string>
    <string name="saved_default_farePerKm">10.0</string><string name="saved_default_minDist">2.0</string>
    
    <string name="value_minFare">20.0</string>
    <string name="value_farePerKm">10.0</string><string name="value_minDist">2.0</string>
    <string name="str_noPoints_sorry">Sorry! :(</string>
    <string name="str_noPoints_cause">No routes found.</string>
    <string name="str_noPoints_help">Perhaps changing your search terms would help.\nYou could try:\n1. Ensuring the spelling and (if possible, the capitalization) is correct.\n2. Add a comma (,) and a generic locality name (district, city, state, etc)\n3. Try looking for other landmarks close to what you are looking for.</string>
    <string name="str_noObj_cause">No data received.</string>
    <string name="str_noObj_help">Check your internet connectivity and try again..</string>
    <string name="app_version">Alpha 0.1</string>
    <string name="app_about">About:\nThis app is an open source project which provides the estimated fare between a source and a destination by using the Goole Maps and Directions APIs.\n\nUse:\n&gt;Enter the source and destination addresses and click on calculate\n&gt;Alternately, click on two points on the map to set the end points\n\nNotes:\nThe fare and duration are subject to traffic conditions.\n\nDisclaimer:\nThe values, directions and any other information provided in this app are purely indicative and comes with no guarantees or warranties (express or implied) of any kind. Use it Wisely.</string>
    <string name="action_clear">Clear</string><string name="app_creator">By Chirag Ravindra</string>
    
    

</resources>
