<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.maingmagic.fairfare.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/collapse_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        app:showAsAction="collapseActionView"/>
    
    <item
        android:id="@+id/collapse_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/collapse_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="collapseActionView"/>
     

</menu>
