<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/TableLayout02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:gravity="center|center_horizontal"
        android:padding="10dp"
        android:shrinkColumns="0,1"
        android:stretchColumns="0,1" >

        <TableRow
            android:id="@+id/TableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings_editFare"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_minFare"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/et_set_minFare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_minDist"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/et_set_minDist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_farePerKm"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/et_set_farePerKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_default" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_update" />

        </TableRow>
    </TableLayout>