<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	tools:context="com.makingmagic.fairfare.InputFragment" 
        android:orientation="vertical">
	    <EditText
                android:id="@+id/et_src"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:ems="10"
                android:hint="@string/str_src_add"
                android:inputType="text" />

       <EditText
                android:id="@+id/et_dest"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:ems="10"
                android:hint="@string/str_dest_add"
                android:inputType="text" />

       

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".33"
            android:layout_gravity="center"
            android:onClick="calculateClickHandler"
            android:text="@string/str_send_button" />
</LinearLayout>


